[package]
name = "actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# actix-multipart = "0.4"
actix-web = "4.2.1"
base64 = "0.20.0"
secp256k1="0.26.0"
sha2="0.10.6"
log ="0.4.17"
env_logger="0.10.0"
hex="0.4.3"